FIX: remove unexpected scrollbar from the new user menu

--- a/app/assets/stylesheets/common/base/menu-panel.scss
+++ b/app/assets/stylesheets/common/base/menu-panel.scss
@@ -361,7 +361,7 @@
     display: flex;
     flex-direction: column;
     min-height: 0;
-    max-height: 100%;
+    max-height: 99%;
     border-top: 1px solid var(--primary-low);
     padding-top: 0.75em;
     margin-top: -1px;
